<resources>
    <string name="app_name">My Trips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="homePage">Home</string>
    <string name="availableText">Upcoming Trips</string>
    <string name="google_maps_key">AIzaSyBu8Hki4OvRVL5fgqwjb7dm8SoWtjw9sVU</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start_trip">Start</string>
    <string name="snooze_trip">Snooze</string>
    <string name="cancel_trip">Cancel</string>
    <string name="menu_home">Home</string>
    <string name="appTitlePart1">My</string>
    <string name="appTitlePart2">Trip</string>
    <string name="appTitle">MyTrip</string>
    <string name="noTripsMessage">No Upcoming Trips!</string>
    <string name="newTripBtn">New Trip</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="Notes">Notes</string>
    <string name="title_activity_main_home_page">MainHomePage</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="StartTrip">Start Trip</string>
    <string name="DONE">DONE</string>
    <string name="tripHint">Trip Title</string>
    <string name="viewPastTripsBtn">View On Map</string>
    <string name="date">The date ?</string>
    <string name="time">The time ?</string>
    <string name="to">Where to go ?</string>
    <string name="from">Where to start ?</string>
    <string name="toBtn">To</string>
    <string name="fromBtn">From</string>
    <string name="timeBtn">Time</string>
    <string name="dateBtn">Date</string>
    <string name="noPastTripsMessage">No Past Trips!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddNote">Add Note</string>
    <string name="ShowDirection">Show Direction</string>
    <string name="title">Enter Trip Title</string>
    <string name="SignOutBtn">sign out</string>
    <string name="RoundTrip">Round Trip</string>
    <string name="backTrip">Back</string>
    <string name="forthTrip">Forth</string>
    <string name="pastTripsText">Past Trips</string>
    <string name="registeration">Registeration</string>
</resources>
